# feishu-proj-cli

./: .env.example  .gitignore  AGENTS.md  README.md  USAGE.md  pyproject.toml
src/feishu_proj/: __init__.py  cli.py  client.py  config.py  tools.py
src/feishu_proj/api/: __init__.py  bugs.py  projects.py  requirements.py  stories.py  versions.py  work_items.py
tests/: test_plan.md
